--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -17,7 +17,7 @@ theme:
       # Palette toggle for light mode
       - scheme: default
         # Color of the top bar
-        primary: indigo
+        primary: deep purple
         # Link highlight color
         accent : orange
         
