--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -12,7 +12,7 @@ copyright: > # should remain a link to the original theme
 
 
 theme:
-    name: material
+    name: dracula
     palette:
       # Palette toggle for light mode
       - scheme: default
