picture add attempt

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -13,6 +13,7 @@ copyright: > # should remain a link to the original theme
 
 theme:
     name: dracula
+    favicon: img/favicon.ico
     palette:
       # Palette toggle for light mode
       - scheme: default
