--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -1,5 +1,5 @@
 # Change to your own name
-site_name: Gui's Website
+site_name: Gui Caumo
 # Change to your own site
 site_url: https://gfhcaumo.github.io/ # must have the trailing slash
 site_author: Guilherme H. Caumo (guilherme.caumo@mail.mcgill.ca)
