--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -60,6 +60,8 @@ nav:
   - About Me: about/index.md
   - Research: reasearch/index.md
   - Projects: projects/index.md
+  - Contact: contact/index.md
+
 
 # Extensions that we want to use
 markdown_extensions:
